Release 2.44.1

Copyright (c) 1998-2012 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.44.1 - April ??, 2012

    Added support for the @/2 control construct used in some Prolog module
    systems such as ECLiPSe. It requires compilation of source files with
    the "context_switching_calls" flag set to "allow" and the @/2 control
    construct also recognized as a built-in predicate.

    Updated the ECLiPSe config file to detect when running on Windows 64
    bits systems and to ignore non-predicate and non-operator exports when
    pre-processing lib/1 directives.

    Updated the TextMate bundle to disable the automatic indent corrections
    introduced in the development version of TextMate 2.0.


2.44.0 - March 7, 2012

    Changed the semantics of complementing categories to allow patching both
    predicate declarations and predicate definitions of complemented objects.
    This is accomplished by ensuring that predicate declaration and definition
    lookups start at the complementing categories before looking into the
    complemented object itself or into its related entities.

    Updated the Logtalk compiler in order to generate a warning when compiling
    a complementing category for a complemented object that was compiled with
    support for complementing categories turned off.

    Allow the use of static binding when compiling messages for statically
    declared dynamic methods where both the method declaration and the method
    definition are found on static binding entities.

    Allow the use of static binding when compiling hook object definitions of
    the term_expansion/2 and goal_expansion/2 predicates.
