@@ -15,6 +15,13 @@ RELEASE NOTES
 
 2.44.1 - April ??, 2012
 
+    More consistent handling of compiler flags between setting flag values
+    when compiling/loading a file and when using the set_logtalk_flag/2
+    built-in predicate: in both cases, setting the "smart_compilation" flag
+    on will turn off the "clean" flag and setting the "clean" flag on will
+    turn off the "smart_compilation" flag. Also, setting the "debug" flag
+    on will turn off both the "smart_compilation" and "clean" flags.
+
     Added support for the @/2 control construct used in some Prolog module
     systems such as ECLiPSe. It requires compilation of source files with
     the "context_switching_calls" flag set to "allow" and the @/2 control
